# lsb-steganography

CPP/: CMakeLists.txt  licence.h  main.cpp
CPP/resources/: licence_file.txt
